fix: move the scrollbar to the most right position of the page

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,22 @@
 body {
   font-family: var(--font-inter), ui-sans-serif, system-ui, sans-serif;
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #334155;
+  border-radius: 10px;
+  border: 2px solid #030712;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ef4444;
+}
